--- a/Celiac Website/Celiac.css
+++ b/Celiac Website/Celiac.css
@@ -32,14 +32,40 @@
 	margin: 0 auto;
 	border: 7px solid black;
 	color: #708090;
+	clear: both;
+}
+
+#symptoms {
+      border: 7px solid white;
+      border-radius: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 40em;	
 }
 
 #map {
-	  margin: 40px 0px 0px 0px;
       border: 7px solid white;
       border-radius: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 40em;
 }
 
+#meal {
+      border: 7px solid white;
+      border-radius: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 20em;	
+      height: 18em;
+}
+
+.mealcontent{
+	text-align: left;
+}
 
 h1 {
 	text-align: center;
@@ -51,11 +77,37 @@ h1 {
 	color: #778899;
 }
 
+h2 {
+	clear: both;
+}
 
+h3 {
+	clear: both;
+}
 
-#appetizercontent{
-
+p {
+	clear: both;
 }
 
 
+@media (max-width:500px) {
+  h1 {
+    font-size: 50px;
+    margin-top: 20px;
+    line-height: 40px;
+  }
+  h2 {
+    font-size: 20px;
+    margin: 20px 0 30px 0;
+  }
+  div {
+    margin: 20px 12px 0 12px;
+  }
+  p {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  small {
+    font-size: 16px;
+  }
 </style>
